# AKFES-APP

./: .gitignore  BUILD_AKFES.bat  CHANGELOG.md  CLEAN_TREE.txt  GENERATE_DEMO_KEY.bat  IMPROVEMENTS.md  OPERATIONS.md  README.md  RELEASE.md  RESET_ADMIN_PIN.bat  RESET_LOCAL_CONFIG.bat  RESET_UPDATER_KEY.bat  SECURITY.md  START_AKFES.bat  START_AKFES_ALL.bat  START_AKFES_DEMO.bat  V2_MIGRATION.md  package.json
.github/workflows/: admin-installer.yml  ci.yml  release.yml  windows-installer.yml
AKFES-Client/: START_ELECTRON_DEV.bat  package.json
AKFES-Client/electron/: main.js  preload.js  use-obfuscated.js  (+1 more)
AKFES-Native/: BUILD_EXE.bat  BUILD_HARDENED.bat  RUN_NATIVE_APP.bat  device_identity.py  generate_icon.py  main.py  release_public_key.py  release_signing.py  release_verify.py  requirements.txt  secure_main.py  secure_session.py  secure_transport.py  security_guard.py
AKFES-Server/: GENERATE_KEY.bat  GENERATE_KEY_QUICK.bat  START_SERVER.bat
apps/admin/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
scripts/: build-akfes.ps1  reset-admin-pin.ps1  reset-local-config.ps1  reset-updater-key.ps1  start-akfes.ps1
server/: .env.example  .gitignore  README.md  pyproject.toml  sidecar.py
server/app/: __init__.py  auth.py  config.py  file_crypto.py  files.py  health.py  license_service.py  license_store.py  logout.py  main.py  request_security.py  signed_requests.py
server/tests/: test_auth.py  test_binary_files.py  test_file_crypto.py  test_health.py  test_logout.py  test_sidecar.py
(+29 files in other folders)
