[package]
name = "akfes-admin"
version = "2.0.0"
description = "AKFES License Manager"
authors = ["Smarttiger2338"]
edition = "2021"

[lib]
name = "akfes_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
