[package]
name = "akfes-desktop"
version = "2.0.0"
description = "AKFES Tauri desktop client"
authors = ["Smarttiger2338"]
edition = "2021"

[lib]
name = "akfes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7"
